FetchResponse.formData() should not reject promise if the body is null and the MIME Type is "application/x-www-form-urlencoded" https://bugs.webkit.org/show_bug.cgi?id=228085

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Rebaseline WPT tests now that more checks are passing.

* web-platform-tests/fetch/api/request/request-consume-empty.any-expected.txt:
* web-platform-tests/fetch/api/request/request-consume-empty.any.worker-expected.txt:
* web-platform-tests/fetch/api/response/response-consume-empty.any-expected.txt:
* web-platform-tests/fetch/api/response/response-consume-empty.any.worker-expected.txt:

Source/WebCore:

FetchResponse.formData() should not reject promise if the body is null and the MIME Type is "application/x-www-form-urlencoded":
- https://fetch.spec.whatwg.org/#concept-body-consume-body
- https://fetch.spec.whatwg.org/#concept-body-package-data

As per the specification, we should package an empty byte sequence in this case and resolve the promise with that.

No new tests, rebaselined existing tests.

* Modules/fetch/FetchBodyConsumer.cpp:
(WebCore::FetchBodyConsumer::packageFormData):
(WebCore::resolveWithTypeAndData):
(WebCore::packageFormData): Deleted.
* Modules/fetch/FetchBodyConsumer.h:
* Modules/fetch/FetchBodyOwner.cpp:
(WebCore::FetchBodyOwner::formData):


Canonical link: https://commits.webkit.org/239781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280046 268f45cc-cd09-0410-ab3c-d52691b4dbfc